--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,10 @@ audio {
     background-color: #116414; /* Green */
     color: white;
  }
+ #record:disabled {
+   color: rgb(170, 170, 170);
+   background-color: rgba(239, 239, 239, 0.3);
+}
 
    #stop{
     background-color: red; /* Green */
@@ -58,6 +62,10 @@ audio {
    #stop:hover{
       background-color: #831414; /* Green */
       color: white;
+   }
+   #stop:disabled {
+      color: rgb(170, 170, 170);
+      background-color: rgba(239, 239, 239, 0.3);
    }
 
    #play{
@@ -79,6 +87,10 @@ audio {
       background-color: #272670; /* Green */
       color: white;
    }
+   #play:disabled {
+      color: rgb(170, 170, 170);
+      background-color: rgba(239, 239, 239, 0.3);
+   }
 
    #save{
     background-color: #d1d40b; /* Green */
@@ -99,6 +111,10 @@ audio {
       background-color: #a38b04; /* Green */
       color: white;
    }
+   #save:disabled {
+      color: rgb(170, 170, 170);
+      background-color: rgba(239, 239, 239, 0.3);
+   }
 
 
   h2{
@@ -112,8 +128,6 @@ audio {
   }
 
   #saved-audio-messages{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+display: flex;
+flex-wrap: wrap;
   }
